crates/bitnet-tokenizers/tests/snapshots/snapshot_wave9__llama_variant_gpu_requirements.snap
---
source: crates/bitnet-tokenizers/tests/snapshot_wave9.rs
expression: "output.join(\"\\n\")"
---
Llama2: requires_gpu=false
Llama3: requires_gpu=true
CodeLlama: requires_gpu=false
