crates/bitnet-tokenizers/tests/snapshots/snapshot_wave9__tokenizer_config_llama3_yaml.snap
---
source: crates/bitnet-tokenizers/tests/snapshot_wave9.rs
expression: cfg
---
model_type: llama
vocab_size: 128256
pre_tokenizer: byte_level
add_bos: true
add_eos: false
add_space_prefix: false
byte_fallback: true
bos_token_id: 128000
eos_token_id: 128001
pad_token_id: ~
unk_token_id: ~
vocabulary: ~
bpe_merges: ~
